<resources>
    <string name="app_name">Partage ton produit</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connecter">Connecter</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="la_liste_de_nos_produits">La liste de nos Produits</string>
    <string name="logout">LOGOUT</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="nom">Nom</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="phone">Numeros</string>
    <string name="creer">Creer</string>
    <string name="message">J\'ai deja un compte ? Connecter ici</string>
    <string name="message2">Je n\'ai pas de compte ? Creer ici</string>
    <string name="nomPro">Nom du produit</string>
    <string name="prix">Prix</string>
    <string name="choisir">Choisir l\'image</string>
    <string name="valider">Valider</string>
    <string name="save">Enregistrer</string>
    <string name="ajouter_un_produit">Ajouter un produit</string>
    <string name="se_deconnecter">Se deconnecter</string>
    <string name="voir_nos_produit">Voir nos produit</string>
    <string name="voir_mon_panier">Voir mon panier</string>
    <string name="commander">Commander</string>


</resources>
